test/error/VisibilityPrivateFieldStorage.fu
class Foo
{
	bool Priv = true;
}

public static class Test
{
	public static bool Run()
	{
		Foo() o;
		return o.Priv; //ERROR: Cannot access private member 'Priv'
	}
}
